--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,11 @@
   border: 0;
   box-shadow: none;
 }
+
+.reveal a {
+  text-decoration: underline;
+}
+
+.reveal a:hover {
+  text-decoration: none;
+}
